part2/2.02/kube/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: picture-cache
          persistentVolumeClaim:
            claimName: picture-cache-claim
      containers:
        - name: todo-app
          image: ronituohino/todo-app:2.02.6
          volumeMounts:
          - name: picture-cache
            mountPath: /usr/src/app/cache
